# honey-consumer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  start.sh.sample
docs/: queries.md
honey_consumer/: __init__.py  client.py  database_client.py  exceptions.py  logging_config.py  models.py
honey_consumer/jobs/: ipinfo_enrichment.py  llm_enrichment.py
prompts/: request-classifier.md
