[project]
name = "honey-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-pubsub>=2.30.0",
    "httpx>=0.28.1",
    "ollama>=0.5.1",
    "pydantic>=2.11.5",
    "python-dotenv[cli]>=1.1.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
